@@ -1,12 +1,0 @@
-Magit is an interface to the version control system Git, implemented as
-an extension to Emacs.  Magit supports GNU Emacs version 22 or later.
-
-With Magit, you can inspect and modify your Git repositories with Emacs.
-You can review and commit the changes you have made to the tracked
-files, for example, and you can browse the history of past changes.
-There is support for cherry picking, reverting, merging, rebasing, and
-other common Git operations.
-
-Magit is not a complete interface to Git; it just aims to make the most
-common Git operations convenient.  Thus, Magit will likely not save you
-from learning Git itself.
